--- a/B2W6O1 - Lingo/Lingo.html
+++ b/B2W6O1 - Lingo/Lingo.html
@@ -7,53 +7,15 @@
     <link rel="stylesheet" href="Lingo.css">
 </head>
 <body>
-    <div class="speelbord">
-        <div id="randomWord"></div>
 
-        <div id="input"><input type="text"></div>
+  <div class="speelbord">
+    <button id="raad">Raad</button>   
+  </div>
 
-        <div id="row1">
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-          </div>
-          <div id="row2">
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-          </div>
-          <div id="row3">
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-          </div>
-          <div id="row4">
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-          </div>
-          <div id="row5">
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-            <div class="square default"></div>
-          </div>
-        </div>
+  <div id="container">
 
-        <button id="Start">Raad</button>
-
-    </div>
-
-<script src="Lingo.js"></script>
+  </div>
 
 </body>
+<script src="Lingo.js"></script>
 </html>
